fix the saved search term delete icons in redbasic so they are hidden by default. This is a bit harder using font-based icons than it was with images that could easily be hidden. We'll do it with opacity instead of visibility or display css settings.

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -3449,3 +3449,7 @@ text-decoration: none;
 #menulist {
 	list-style-type: none;
 }
+
+.savedsearchdrop {
+	opacity: 0;
+}
